# murasaki

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: main.rs  tabs.rs
