[package]
name = "Murasaki"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/gradient-labs/murasaki"
keywords = ["web", "browser", "web-browser", "webkit"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.gtk]
version = "0.2"
package = "gtk4"