[package]
name = "murasaki"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/moon-laboratories/murasaki"
keywords = ["web", "browser", "web-browser", "webkit"]


[dependencies]
webkit2gtk = "~0.14"
webkit2gtk-sys = "~0.14"
gdk = "~0.14"
glib = "~0.14"

[dependencies.gtk]
version = "~0.14"
package = "gtk"

[dependencies.libhandy]
version = "~0.8"
features = ["v1_2"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
